--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,5 +32,6 @@
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
 </manifest>
