--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,13 +33,14 @@
         <service android:name=".SpeechRecognizerService" />
         
         <activity
-            android:name=".Tutorial1">
+            android:name=".ARMode">
         </activity>
         
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 </manifest>
