added another libary link

--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=../../../Documents/metaio/metaio SDK - 4.5.1/_Android/metaioSDK
+android.library.reference.1=..\\..\\..\\Documents\\metaio\\metaio SDK - 4.5.1\\_Android\\metaioSDK
+android.library.reference.2=../metaioSDK
